feat: add route and handler deleting folder
